# Proto-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: code.pr
macros/: Cargo.toml
macros/src/: lib.rs
src/: grammar  grammar.g4  interpreter.rs  lexer.rs  main.rs  parser.rs  token.rs
src/code_generator/: code_generator.rs  mod.rs
src/compile_time_evaluator/: compile_time_evaluator.rs  mod.rs
src/compiler/: compiler.rs  mod.rs
src/frontend/: expr.rs  lexer.rs  mod.rs  parser.rs  stmt.rs  token.rs  type_.rs  value.rs  visitor.rs
