[package]
name = "proto-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
proto-rs-macros = { path = "./macros" }
inkwell = { version = "0.2.0", features = ["llvm16-0"] }
llvm-sys-160 = {package = "llvm-sys", version = "160.0.0", features = ["prefer-static"] }
clap = { version = "4.4.11", features = ["cargo"] }
